# unifier-monorepo

./: .gitignore  Cargo.toml  DEVELOPER_ONBOARDING.md  README.md  debug_hash.rs  extract_distinct_types.sh  test.md
apps/Unifier/: package.json
apps/Unifier/src-tauri/: Cargo.toml  tauri.conf.json
apps/Unifier/src-tauri/src/: main.rs
apps/cli/: Cargo.toml
crates/installer/: Cargo.toml  README.md
crates/installer-v2/: Cargo.toml
crates/installer-v2/src/: lib.rs
crates/installer-v2/src/downloader/: downloader.rs
crates/installer/examples/: batch_download_example.rs  download_example.rs
crates/installer/src/: ARCHITECTURE.md  TODO.md  downloader.rs  lib.rs
crates/installer/src/download/: mod.rs
crates/installer/src/download/sources/: archive.rs  gamefile.rs  http.rs  manual.rs  mod.rs  nexus.rs  unknown.rs  wabbajack_cdn.rs
crates/installer/src/downloader/: batch.rs  config.rs  error.rs  http.rs  lib.rs  mod.rs  progress.rs  registry.rs  tests.rs  validation.rs
crates/installer/src/downloader/api/: mod.rs  nexus_api.rs
crates/installer/src/downloader/backends/: gamefile.rs  http.rs  mod.rs  wabbajack_cdn.rs
crates/installer/src/downloader/batch/: mod.rs
crates/installer/src/downloader/core/: config.rs  error.rs  files.rs  http.rs  metrics.rs  mod.rs  progress.rs  validation.rs
crates/installer/src/downloader/sources/: archive.rs  gamefile.rs  http.rs  manual.rs  mod.rs  nexus.rs  unknown.rs  wabbajack_cdn.rs
crates/installer/src/install/: error.rs  install.rs  lib.rs  mod.rs
crates/installer/src/install/directives/: archive_meta.rs  common_directive_utils.rs  create_bsa.rs  from_archive.rs  ignored_directly.rs  inline_file.rs  merged_patch.rs  mod.rs  no_match.rs  patched_from_archive.rs  property_file.rs  remapped_inline_file.rs  test_directive.rs  transformed_texture.rs
crates/installer/src/install/vfs/: mod.rs  vfs.rs
crates/installer/src/integrations/: mod.rs  modlist.rs  nexus_rate_limit_reporter.rs  progress.rs  request_ext.rs
crates/installer/src/parse_wabbajack/: integration.rs  mod.rs  nexus.rs  operations.rs  parser.rs  sources.rs
downloads/: Test Mod  test-uuid.json
examples/: gamefile_example.rs  hp_bl_dl.rs  manual_download_example.rs  nexus_dl.rs  parse_baseline_example.rs  simple_baseline_download.rs  size_progress_example.rs  structured_download_example.rs  wabbajack_cdn_example.rs
