[package]
name = "installer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json", "cookies", "gzip", "brotli"] }

# File validation
crc32fast = "1.4"
digest = "0.10"
md5 = { version = "0.7", features = ["std"] }
sha2 = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

# Retry logic
tokio-retry = "0.3"

# File system
tempfile = "3.8"

# Logging
tracing = "0.1"

# URL parsing
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

