[package]
name = "installer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json", "cookies", "gzip", "brotli"] }

# File validation
crc32fast = "1.4"
digest = "0.10"
md5 = { version = "0.7", features = ["std"] }
sha2 = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

# Retry logic
tokio-retry = "0.3"

# File system
tempfile = "3.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# URL parsing
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression
flate2 = "1.0"

# Parallel computation
rayon = "1.8"

# Lazy static initialization
once_cell = "1.19"

# Hex encoding/decoding
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tracing-subscriber = "0.3"

[[example]]
name = "structured_download_example"
path = "../../examples/structured_download_example.rs"

[[example]]
name = "parse_baseline_example"
path = "../../examples/parse_baseline_example.rs"

[[example]]
name = "wabbajack_cdn_example"
path = "../../examples/wabbajack_cdn_example.rs"

