[package]
name = "installer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json", "cookies", "gzip", "brotli"] }

# File validation - xxHash64 only
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

# Retry logic
tokio-retry = "0.3"

# File system
tempfile = "3.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# URL parsing
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression
flate2 = "1.0"

# Parallel computation
rayon = "1.8"

# Lazy static initialization
once_cell = "1.19"

# Hex encoding/decoding
hex = "0.4"

# Base64 encoding/decoding
base64 = "0.21"

# Environment variable loading
dotenv = "0.15"

# Windows registry (Windows only)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
wiremock = "0.6"
tracing-subscriber = "0.3"
http = "0.2"



[[example]]
name = "hp_bl_dl"
path = "../../examples/hp_bl_dl.rs"


[[example]]
name = "nexus_dl"
path = "../../examples/nexus_dl.rs"
